SQL: Make QSqlDatabase::DriverDict creation thread-safe

Make the QSqlDatabase::DriverDict thread-safe and make sure it's
properly cleaned up on destruction.

Fixes: QTBUG-112961
Change-Id: I1ff70e477579231754ef829fdede944d6042894d
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>
(cherry picked from commit 048a68c1e965350ad9ff7d4ab1fdaac56a2583a0)