src/sql/kernel/qsqldatabase.cpp
@@ -10,6 +10,7 @@
 #include "qsqldriver.h"
 #include "qsqldriverplugin.h"
 #include "qsqlindex.h"
+#include "QtCore/qapplicationstatic.h"
 #include "private/qfactoryloader_p.h"
 #include "private/qsqlnulldriver_p.h"
 #include "qmutex.h"
@@ -25,8 +26,6 @@ Q_GLOBAL_STATIC_WITH_ARGS(QFactoryLoader, loader,
                           (QSqlDriverFactoryInterface_iid, "/sqldrivers"_L1))
 
 const char *QSqlDatabase::defaultConnection = const_cast<char *>("qt_sql_default_connection");
-
-typedef QHash<QString, QSqlDriverCreatorBase*> DriverDict;
 
 class QConnectionDict: public QHash<QString, QSqlDatabase>
 {
@@ -45,6 +44,14 @@ public:
     mutable QReadWriteLock lock;
 };
 Q_GLOBAL_STATIC(QConnectionDict, dbDict)
+
+namespace {
+    struct DriverDict : public QHash<QString, QSqlDriverCreatorBase*>
+    {
+        ~DriverDict();
+    };
+}
+Q_APPLICATION_STATIC(DriverDict, qtDriverDict)
 
 class QSqlDatabasePrivate
 {
@@ -121,23 +128,15 @@ void QSqlDatabasePrivate::cleanConnections()
     dict->clear();
 }
 
-static bool qDriverDictInit = false;
-static void cleanDriverDict()
+DriverDict::~DriverDict()
 {
-    qDeleteAll(QSqlDatabasePrivate::driverDict());
-    QSqlDatabasePrivate::driverDict().clear();
+    qDeleteAll(*this);
     QSqlDatabasePrivate::cleanConnections();
-    qDriverDictInit = false;
 }
 
 DriverDict &QSqlDatabasePrivate::driverDict()
 {
-    static DriverDict dict;
-    if (!qDriverDictInit) {
-        qDriverDictInit = true;
-        qAddPostRoutine(cleanDriverDict);
-    }
-    return dict;
+    return *qtDriverDict();
 }
 
 QSqlDatabasePrivate *QSqlDatabasePrivate::shared_null()
@@ -511,7 +510,8 @@ QStringList QSqlDatabase::drivers()
                 list << it.value();
     }
 
-    DriverDict dict = QSqlDatabasePrivate::driverDict();
+    QReadLocker locker(&dbDict()->lock);
+    const DriverDict &dict = QSqlDatabasePrivate::driverDict();
     for (DriverDict::const_iterator i = dict.constBegin(); i != dict.constEnd(); ++i) {
         if (!list.contains(i.key()))
             list << i.key();
@@ -649,7 +649,8 @@ void QSqlDatabasePrivate::init(const QString &type)
     drvName = type;
 
     if (!driver) {
-        DriverDict dict = QSqlDatabasePrivate::driverDict();
+        QReadLocker locker(&dbDict()->lock);
+        const DriverDict &dict = QSqlDatabasePrivate::driverDict();
         for (DriverDict::const_iterator it = dict.constBegin();
              it != dict.constEnd() && !driver; ++it) {
             if (type == it.key()) {
